--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -341,3 +341,19 @@ span.button {
   height: auto;
   box-sizing: content-box;
 }
+
+span.button.encode {
+  background-color: #42a5f5;
+}
+
+span.button.encode2 {
+  background-color: #1e88e5;
+}
+
+span.button.decode {
+  background-color: #66bb6a;
+}
+
+span.button.decode2 {
+  background-color: #43a047;
+}
